<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="cardinal_north">N</string>
    <string name="cardinal_east">E</string>
    <string name="cardinal_south">S</string>
    <string name="cardinal_west">W</string>
    <string name="app_name">DefinitiveGuide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="menu_settings">Settings</string>
    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">释放以刷新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="pull_to_refresh_updated_at_label">最近更新于: </string>
    <string name="loadmore_label">加载更多</string>
    <string name="scan">扫描</string>
    <string name="scan_group">扫描分组</string>
    <string name="loading_label">正在加载....</string>
    <string name="URL_HOST">http://192.168.1.115/df</string>
    <string name="net_error">当前网络不可用，请先连接Internet！</string>
    <string name="crc">597918297</string>
    <string name="quake_feed">http://earthquake.usgs.gov/earthquakes/catalogs/1day-M2.5.xml</string>
    <string name="exception_exit">Sorry ,App is force close !</string>
    <string name="qnSingleUpload">七牛单文件上传</string>
    <string name="qnBreakPointUpload">七牛单文件断点上传</string>
    <string name="picIcon">选择头像</string>
    <string name="picCrop">图片裁剪</string>
    <string name="images_auto_group">相册自动分组</string>
    <string name="flush">刷新</string>
    <string name="SimpleWebView">简单webview</string>
    <string name="JsCallJava">webview &amp;&amp; js</string>
    <string name="pbWebView">带进度条的 webview</string>
    <string name="chosePicFromStore">从图库选择图片</string>
    <string name="str_name">名称：</string>
    <string name="str_steps">步数：</string>
    <string name="str_battery">电量：</string>
    <string name="str_params">参数：</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="recorderVoice">录音</string>
    <string name="pressTalk">按住说话</string>
    <string name="voiceDel">确定删除该语音？</string>
    <string name="sure">确认 </string>
    <string name="normalDownload">普通下载 </string>
    <string name="startOtherApp">打开其他应用 </string>
    <string name="uploadAppsInfo">上传Apps信息</string>
    <string name="app_size_empty">应用信息为空，请检查。。。</string>
    <string name="app_scan_failure">应用程序信息扫描失败。</string>
    <string name="app_scan_success">应用程序信息扫描成功。</string>
    <string name="app_upload_failure">文件上传失败(%s)</string>
    <string name="app_upload_success">文件上传成功(七牛bucket：%s)</string>
    <string name="app_scan_startupload">文件开始上传</string>
    <string name="tempfile_del_success">临时文件删除成功</string>
    <string name="str_mobile_manager">手机管理</string>
    <string name="str_get_mobile_no">获取手机号</string>
    <string name="str_ble">蓝牙低功耗</string>
    <string name="str_shell_command">shell</string>
    <string name="str_wifi_info">WifiInfo</string>
    <string name="ble_shiyun">时云智能设备</string>
    <string name="ble_open">打开Ble</string>
    <string name="ble_close">关闭Ble</string>
    <string name="ble_check">Ble检测</string>
    <string name="ble_start_scan">开始扫描Ble</string>
    <string name="finish">Back</string>
    <string name="ble_stop_scan">停止扫描Ble</string>
    <string name="shiyun_find_device">设备连接</string>
    <string name="str_connect">链接</string>
    <string name="str_disconnect">断开连接</string>
    <string name="ble_not_supported">Your device does not support BLE</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No Connection</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Select BLE Device</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="connection_successful">The connection is successful, you can now communicate properly!</string>
    <string name="no_such_user">No such user</string>
    <string name="user_exists">User exists</string>
    <string name="deleted_successfully">Deleted successfully</string>
    <string name="delete_failed">Delete failed</string>
    <string name="years_old">years old</string>
    <string name="new_user_successfully">New user successfully</string>
    <string name="users_is_full">The number of users is full, not new!</string>
    <string name="user_is_exists">This user number already exists</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="user_not_exist">User number does not exist</string>
    <string name="age_height">Age than 9 and less than 81. Height greater than 99 and less than 221.</string>
    <string name="select_success">Select success</string>
    <string name="choose_failure">Choose failure</string>
    <string name="loading">Loading...</string>
    <string name="no_history_data">No historical data</string>
    <string name="p9_test">P9 Test:</string>
    <string name="send">Send</string>
    <string name="scale">Scale</string>
    <string name="readnumber">RNumber</string>
    <string name="writenumber">WNumber</string>
    <string name="user_id">UserId：</string>
    <string name="height">Height：</string>
    <string name="age">Age：</string>
    <string name="sex">Sex：</string>
    <string name="delete_user">Delete User</string>
    <string name="update_user">Update User Info</string>
    <string name="delete_scale">Delete Scale</string>
    <string name="is_exist">Is Exist</string>
    <string name="get_sim_user">Get Sim User</string>
    <string name="clear">Clear</string>
    <string name="scale_switch">Scale Switch</string>
    <string name="create_user">Create User</string>
    <string name="read_user_history">Read User History</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="measuring_time">Measuring time:</string>
    <string name="weight">Weight:</string>
    <string name="fat">Fat:</string>
    <string name="moisture">Moisture:</string>
    <string name="muscle">Muscle:</string>
    <string name="bone">Bone:</string>
    <string name="calories">Calories:</string>
    <string name="subcutaneous_fat">Subcutaneous fat:</string>
    <string name="visceral_fat">Visceral fat:</string>
    <string name="body_age">Body Age:</string>
    <string name="dismiss">Dismiss</string>

    <!-- Menu items -->
    <string name="menu_connect">connect</string>
    <string name="menu_disconnect">disconnect</string>
    <string name="menu_scan">search</string>
    <string name="menu_stop">stop</string>
    <string name="title_oad">Firmware update (OAD)</string>
    <string name="start_prog">Start programming</string>
    <string name="prog_ogoing">NB! Not permitted to close this view during OAD transfer</string>
    <string name="load_image_a">Image A</string>
    <string name="load_image_b">Image B</string>
    <string name="load_image_c">Custom</string>
    <string name="no_image">Not an OAD image</string>
    <string name="no_image_sel">No image selected</string>
    <string name="new_image">New image:</string>
    <string name="cur_image">Current image:</string>
    <string name="idle">idle</string>
    <string name="btn_txt_confirm">Confirm</string>

</resources>