<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnSimpleWebView"
                    style="@style/btnItem"
                    android:text="@string/SimpleWebView" />

                <Button
                    android:id="@+id/btnWvJsCallJava"
                    style="@style/btnItem"
                    android:text="@string/JsCallJava" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnPbWebView"
                    style="@style/btnItem"
                    android:text="@string/pbWebView" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>