<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout style="@style/lyVerticalStyle" >

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/chapter1"
                    style="@style/btnItem"
                    android:text="chapter1" />

                <Button
                    android:id="@+id/chapter2"
                    style="@style/btnItem"
                    android:text="chapter2" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/widget"
                    style="@style/btnItem"
                    android:text="Widget" />

                <Button
                    android:id="@+id/dataSave"
                    style="@style/btnItem"
                    android:text="dataSave" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/btnSystemUI"
                    style="@style/btnItem"
                    android:text="SystemActivity" />

                <Button
                    android:id="@+id/btnUserUI"
                    style="@style/btnItem"
                    android:text="UserActivity" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/btnGroupUI"
                    style="@style/btnItem"
                    android:text="GroupActivity" />

                <Button
                    android:id="@+id/btnReceiver"
                    style="@style/btnItem"
                    android:text="BroadcastReceiver" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/btnContentProvider"
                    style="@style/btnItem"
                    android:text="ContentProvider" />

                <Button
                    android:id="@+id/btnServices"
                    style="@style/btnItem"
                    android:text="Services" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/btnWebView"
                    style="@style/btnItem"
                    android:text="WebView" />

                <Button
                    android:id="@+id/btnNetWork"
                    style="@style/btnItem"
                    android:text="NetWork" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/btnCoordinates"
                    style="@style/btnItem"
                    android:text="Coordinates" />

                <Button
                    android:id="@+id/btnJNI"
                    style="@style/btnItem"
                    android:text="JNI" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/btnCustomerUI"
                    style="@style/btnItem"
                    android:text="CustomerUI" />

                <Button
                    android:id="@+id/btnListViews"
                    style="@style/btnItem"
                    android:text="ListViews" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/btnLoginUIs"
                    style="@style/btnItem"
                    android:text="LoginUIs" />

                <Button
                    android:id="@+id/btnLocations"
                    style="@style/btnItem"
                    android:text="Location" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/btnImgs"
                    style="@style/btnItem"
                    android:text="ImageViews" />

                <Button
                    android:id="@+id/btnApp"
                    style="@style/btnItem"
                    android:text="AppsManager" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/btnSecurity"
                    style="@style/btnItem"
                    android:text="Security" />

                <Button
                    android:id="@+id/btnGames"
                    style="@style/btnItem"
                    android:text="Games" />
            </LinearLayout>

            <LinearLayout style="@style/lyHorizontalStyle" >

                <Button
                    android:id="@+id/btnMedia"
                    style="@style/btnItem"
                    android:text="Media" />

                <Button
                    android:id="@+id/btnInternet"
                    style="@style/btnItem"
                    android:text="Internet" />
            </LinearLayout>

            <LinearLayout style="@style/lyItem" >

                <Button
                    android:id="@+id/btnViews"
                    style="@style/btnItem"
                    android:text="Views" />

                <Button
                    android:id="@+id/btnEnc"
                    style="@style/btnItem"
                    android:text="Enc" />
            </LinearLayout>

            <LinearLayout style="@style/lyItem" >

                <Button
                    android:id="@+id/btnHandler"
                    style="@style/btnItem"
                    android:text="Handler" />

                <Button
                    android:id="@+id/btnEventDistribution"
                    style="@style/btnItem"
                    android:text="事件分发" />
            </LinearLayout>

            <LinearLayout style="@style/lyItem" >

                <Button
                    android:id="@+id/btnPhoneGap"
                    style="@style/btnItem"
                    android:text="PhoneGap" />

                <Button
                    android:id="@+id/btnChartEngine"
                    style="@style/btnItem"
                    android:text="ChartEngine" />
            </LinearLayout>

            <LinearLayout style="@style/lyItem" >

                <Button
                    android:id="@+id/btnMobileManager"
                    style="@style/btnItem"
                    android:text="@string/str_mobile_manager" />

                <Button
                    android:id="@+id/btnBleHome"
                    style="@style/btnItem"
                    android:text="@string/str_ble" />
            </LinearLayout>

            <LinearLayout style="@style/lyItem" >

                <Button
                    android:id="@+id/btnShell"
                    style="@style/btnItem"
                    android:text="@string/str_shell_command" />

                <Button
                    android:id="@+id/btnAnim"
                    style="@style/btnItem"
                    android:text="Animation" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>